Bug 101580 - Profile pic of contact need to be aligned.
Revert the changes for chat title height in default variables.scss file. Added the margin-top for title to center align them.

https://bugzilla.zimbra.com/show_bug.cgi?id=101580

Copied from Perforce
 Change: 558836

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Converse.js (Web-based XMPP instant messaging client)
  * http://conversejs.org
@@ -468,8 +469,8 @@
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
     height: 289px;
-    height: -webkit-calc(100% - 32px);
-    height: calc(100% - 32px);
+    height: -webkit-calc(100% - 44px);
+    height: calc(100% - 44px);
     border-top: 0; }
     #conversejs .chat-body p {
       font-size: 14px;
@@ -610,7 +611,7 @@
     white-space: nowrap; }
   #conversejs .chat-head-chatbox,
   #conversejs .chat-head-chatroom {
-    height: 32px;
+    height: 44px;
     position: relative;
     padding: 5px; }
   #conversejs .user-custom-message,
@@ -1046,8 +1047,8 @@
     text-align: center;
     width: 100%;
     height: 289px;
-    height: -webkit-calc(100% - 32px);
-    height: calc(100% - 32px); }
+    height: -webkit-calc(100% - 44px);
+    height: calc(100% - 44px); }
   #conversejs .controlbox-pane {
     padding: 5px 0;
     overflow-y: hidden; }
@@ -1142,7 +1143,7 @@
     #conversejs .chat-head.controlbox-head {
       /* ZCS - Original code commented */
       color: #333333;
-      height: 32px;
+      height: 44px;
       margin: 0;
       padding: 3px 0; }
     #conversejs .chat-head .avatar {
@@ -1158,7 +1159,7 @@
       #conversejs .chat-head #controlbox-tabs a.current:hover {
         box-shadow: none;
         border-bottom: 0;
-        height: 32px;
+        height: 44px;
         cursor: default;
         color: #D5D5D5; }
       #conversejs .chat-head #controlbox-tabs li {
@@ -1553,7 +1554,7 @@
 #conversejs .chatbox .dropdown span.icon-offline,
 #conversejs .chatbox .dropdown span.icon-dnd,
 #conversejs .chatbox .dropdown span.icon-away {
-  padding-top: 0.38rem; }
+  padding-top: 0.3rem; }
 
 #conversejs .chat-title {
   padding: 0px 0px 0px 0px; }
@@ -1561,3 +1562,19 @@
 /*Style for the top right icons on the buddy list*/
 #conversejs #controlbox div.xmpp-status > SPAN {
   margin-top: 0.5rem; }
+
+#conversejs a.close-chatbox-button {
+  font-size: 1.1rem;
+  margin-top: 0.1rem; }
+
+#conversejs .chatbox .dropdown a {
+  margin-top: 0.1rem; }
+
+#conversejs .chatbox .dropdown dt a span {
+  padding-right: 0.4rem; }
+
+#conversejs .chat-title [class^="icon-"] {
+  padding-right: 0.2rem; }
+
+#conversejs .chat-title, #conversejs dt.fancy-dropdown, #conversejs a.close-chatbox-button {
+  margin-top: 5px; }
