--- a/converse/converse.js-0.9.4/sass/_variables.scss
+++ b/converse/converse.js-0.9.4/sass/_variables.scss
@@ -13,7 +13,7 @@
   $highlight-color: #E3C9C1;
   $chat-head-text-color: #D5D5D5;
   $chat-head-inverse-text-color: #333333;
-  $chat-head-height: 32px;
+  $chat-head-height: 44px;
   $save-button-color: #436F64;
   $chat-textarea-height: 36px;
   $toolbar-height: 20px;
