--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -268,3 +268,7 @@
  #conversejs .chat-title [class^="icon-"]{
     padding-right: 0.2rem;
     }
+
+#conversejs .chat-title, #conversejs dt.fancy-dropdown, #conversejs a.close-chatbox-button {
+  margin-top: 5px;
+}
